syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "ForwardType.proto";
import "Vector.proto";

// CmdId: 337
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message EvtDoSkillSuccNotify {
	ForwardType forward_type = 6;
	uint32 caster_id = 10;
	uint32 skill_id = 1;
	Vector forward = 8;
}
